--- a/index.html
+++ b/index.html
@@ -921,6 +921,8 @@ Error message and password prompt
 
 <li>Performances</li>
 
+<li>Performing 'boardness' article</li>
+
 <li>Performing Boardness</li>
 
 <li>Performing Borders interview</li>
@@ -13526,14 +13528,14 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220923121246433" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20221017094015381" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20221010122016845" title="$:/state/toc/TableOfContents-About--118161433">
-<pre>close</pre>
+<div created="20211209081213628" modified="20221018114748919" title="$:/state/toc/TableOfContents-About--118161433">
+<pre>open</pre>
 </div>
 <div created="20220513071259660" modified="20221010122023977" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
 <pre>close</pre>
@@ -13928,7 +13930,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20221012085251194" list="[[Forthcoming Work]] Contact Hello [[Current Work]]" modified="20221012085702353" title="$:/StoryList">
+<div created="20221018114750931" list="[[Writing and press about my work]] [[Current Work]]" modified="20221018115418891" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14830,7 +14832,7 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20220930115029910" tags="[[Current and Selected Work]]" title="Current Work">
+<div created="20220513065347695" modified="20221018122843058" tags="[[Current and Selected Work]]" title="Current Work">
 <pre>Exhibitions, residencies, talks and projects that are currently on display or available to view. 
 
 Also check out [[recent work|Recent Work]] I've finished in the last few months together with some completed while back but are still considered recent to me because they have a long finish. 🍷 
@@ -14840,6 +14842,7 @@ Also check out [[recent work|Recent Work]] I've finished in the last few months 
 [[Works-in-Progress]] are emerging and current areas of study/research that may or may not ever be presented. Some current long term projects may be described or categorised here too, but always within the context of various nodes of artistic study and development that I am working on.
 
 !!Current Work
+|[img[https://www.artsprofessional.co.uk/sites/artsprofessional.co.uk/files/styles/551_by_350_feature/public/main/articles/edited_jack_tan_performing_boardness.png?itok=Zs5rh09h]]|[[Performing 'boardness' article|https://www.artsprofessional.co.uk/magazine/article/performing-boardness]] on Arts Professional about my residency on the FACT Liverpool Board of Trustees, by CEO Nicola Triscott.]]|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Mandy%20Merzaban,%20Workspace%20Tableau%202021.png?raw=true]]|Slow Writing with Mandy Merzaban, Autumn 2022. A collaborative writing project with Mandy Merzaban to share our thoughts and practices. Commissioned by Delfina Foundation and funded by Tate.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Performing%20Boardness%20-%20audience%20image1.jpg?raw=true]]|[[Performing Boardness]] for [[Fact Liverpool|https://www.fact.co.uk/event/jack-tan-performing-boardness]], Sep 2022. A participatory performance and installation where FACT Trustees perform board meetings with members of the public. The culmination of my [[FACT Board Artist-in-Residence]], I will be presenting a performance event at FACT Liverpool comprising a number of roundtables led by FACT board members. This event is an adaptation of Neil Cumming's reenactment of the Artist Placement Group's 'Sculpture' which he produced at Raven Row and called [['Education Not Knowing'|https://neilcummings.com/content/apg-sculpture]].|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Homo%20Sacer%20-%20la%20trobe%20entrance.jpg?raw=true]]|''Homo Sacer exhibtion'' for [[La Trobe Art Institute|https://www.latrobe.edu.au/art-institute]] in Bendigo, Victoria, Australia (Feb - May 2023). The exhibition explores the condition of outside or ejected from the law, or of lives and bodies being 'unlawed'.|
@@ -16418,6 +16421,58 @@ It was interesting to note that event though the majority of the audience was Pa
 <div created="20210925121911891" modified="20220513065053783" tags="[[Artistic Practice]]" title="Performances">
 <pre></pre>
 </div>
+<div created="20221018115422803" modified="20221018122636999" tags="[[Writing and press about my work]]" title="Performing 'boardness' article">
+<pre>!Performing ‘boardness’
+&lt;br&gt;12 October 2022, published on [[Arts Professional|https://www.artsprofessional.co.uk/magazine/article/performing-boardness]].
+
+''What does it mean to have an artist-in-residence working with the board? Nicola Triscott reflects on an unusual journey revealing the importance of board culture to arts organisations.''
+
+In 2021, Jack Tan joined FACT Liverpool as its first board artist-in-residence, providing artistic intervention and exploration into the processes of governance. In an early conversation, we discussed ‘boardness’ - the systems and behaviours that boards adopt and feel they need to perform in the board environment. ‘Boardness’ behaviours, we agreed, suit only a minority of people, excluding others from authentic and effective governance.
+
+What is this ‘boardness’ that we found such a barrier to inclusivity? It’s a slippery concept but broadly it is socialised behaviour taught through media representations and experience in spaces of power and oversight. It tends to emphasise and reward those who display knowledge and expertise, who challenge others and resist challenges to themselves.
+
+Culturally, there are vast differences in how people communicate which can also exclude people from board conversations. For example, a person’s geographical origin and ethnic background influence how long a pause between speakers seems natural, which can contribute to some dominating a conversation with others believing their view isn’t valued.
+
+''The system depends on shared culture''
+
+Another aspect of ‘boardness’ is how the meetings are organised and run. There are many scholarly articles on effective board governance. FACT tries to follow best practice: board meetings are regular, well-planned and kept to time, with papers sent in advance and agendas standardised. To be effective, the system relies on a productive board culture shaped by members’ ideologies and beliefs and by their relationships with the executive leadership, staff and one another.
+
+Arts boards are fraught with challenges and contradictions. Board members (trustees in the case of charities) are perceived to have great power, but often they meet only a handful of times a year and are dependent on information provided by senior management and on the team to carry out decisions. They hold ultimate responsibility for ensuring that the organisation serves its mission and for the overall welfare of the organisation, yet they are unpaid volunteers with their own careers and life demands. 
+
+The perceptions of the type of person who serves on a board can also work to attract only certain types of people and exclude those who might bring great insight and knowledge. And yet a diverse board with a strong positive culture can be of immense support, particularly in times of crisis and change.
+
+''Why appoint a board artist-in-residence rather than an artist trustee?''
+
+Initially, I had approached Jack as a potential trustee. When he expressed reluctance, I thought both about the reasons he had given - including his dyslexia which added an additional layer of work to governance - and my own experience of observing artists on boards. 
+
+I wondered how an artist might bring their authentic self and practice to the sphere of governance, rather than being asked to perform the traditional rituals of ‘boardness’. It occurred to me that the structure of an artist residency could be adopted, getting round the strict restrictions that the Charity Commission places on paying trustees. It would also help towards achieving my desire to integrate artists into the heart of FACT. 
+
+So Jack attended FACT’s board meetings not as a trustee but as an artist invited to approach the sphere of governance and its dialogic exchanges as an art medium. The residency did not have an outcome in mind. The idea was simply to have an artist’s creative and critical perspective on the board, casting a different eye on the processes and acts of governance.Jack’s background and practice were uniquely well-suited for an inaugural board artist-in-residence. Prior to becoming an artist, he trained as a lawyer and worked in civil litigation as well as in NGOs undertaking human rights case, policy and anti-racist campaigning work. 
+
+He uses social relations and cultural norms as his artistic material, creating performances, sculpture, video and participatory projects that highlight the rules - customs, rituals, habits and theories - that guide human behaviour.
+
+''Unpacking the structures''
+
+Jack’s residency unfolded as an invaluable opportunity to think through how we do governance and what could be done better. From an early stage, Jack announced his intention to do some public programming as a shared artwork, involving the board as co-creators. 
+
+One of these dialogic events, Performing Trust, explored what trust is (inspired by the job title of ‘trustee’) and what happens when trust is lost. The speakers reflected on how we can build, or rebuild, maintain and explore trust through organisational work and policymaking. Accounting and Accountability considered ways of drawing on other worldviews of accounting to reconsider who and what is accounted for and the stories they represent.
+
+Both of these concepts, and the public events, were reflected on in depth at board meetings.
+
+''Moving forward''
+
+At Jack’s final board meeting, the trustees reflected on what the residency had meant. They felt his involvement changed the dynamic of the board, enabling it to be less linear and more authentic in its business, providing a space in which members were more able to be themselves.  It also initiated a new way of thinking about governance and how it affects our lives and us as an organisation. One trustee noted that she had slipped into thinking that governance was separate from creative practice and had been prompted to make new connections. Governance, accountability and accounts could be creative processes. 
+
+Of course, Jack’s work could not have been effective in isolation. His residency took place in the wider context of work I was undertaking as the relatively new chief executive. I had inherited an organisation that had been through major upheaval following the departure of the longstanding chief executive and then nine months of interim leadership. 
+
+FACT’s staff were keen to embrace principles of equality, diversity, inclusion and transparency in our organisational culture. Jack’s appointment was an opportunity to make radical steps towards making governance more inclusive and effective. FACT’s chair Rachel Higham and I had already taken steps to ‘re-wire’ board meetings - introducing more narrative and storytelling into board reports, reducing the level of verbal reporting and freeing up time to deep dive into specific topics. 
+
+With Jack’s input enabling deeper thinking, there has been a significant cultural shift. Our latest board away day was a genuinely warm, listening and supportive gathering. Trustees feel strongly that we have learned enough to be able to continue co-creating a space of inclusion, active listening, informed decision-making and support. Our learning will enable a stronger and more involved board, which will help to drive and support FACT’s organisational culture and resilience in a time of great change.
+
+With all the contradictions of charitable structures, it is worth committing time and resources to improving board culture, as it has a significant impact on organisational culture and improves board effectiveness. Having paid artists-in-residence on the board is one way to bring artists’ voices into the heart of governance of arts organisations.
+
+''Nicola Triscott is Chief Executive Officer of FACT Liverpool.''</pre>
+</div>
 <div created="20220915085525378" modified="20220925131727581" tags="[[Current Work]] [[the potting shed]] Talks 2022 Installation Performances [[FACT Board Artist-in-Residence]]" title="Performing Boardness">
 <pre>[img width=&quot;600&quot;[https://github.com/jackkytan/websiteimages/blob/master/Performing%20Boardness%20-%20audience%20image1.jpg?raw=true]]
 
@@ -17558,7 +17613,7 @@ via [[Helen Starr|http://www.themechatroniclibrary.com/about.html]]
 
 watch this space</pre>
 </div>
-<div caption="Contents" created="20210925093547619" list-after="$:/core/ui/SideBar/Open" modified="20220514073840426" tags="$:/tags/SideBar" title="TableOfContents">
+<div caption="Contents" created="20210925093547619" list-after="$:/core/ui/SideBar/Open" modified="20221017094355521" tags="$:/tags/SideBar" title="TableOfContents">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'TableOfContents' sort[title]&gt;&gt;
@@ -18074,8 +18129,10 @@ Universities as a concept is now so neoliberal that it is making a mockery of th
 <div created="20210925114645881" modified="20210925114647122" tags="TableOfContents" title="Writing">
 <pre></pre>
 </div>
-<div created="20211209081210238" modified="20220614051208379" tags="About" title="Writing and press about my work">
-<pre>[[Interview on the Art/Law Network|https://artlawnetwork.org/interview-with-artist-jack-tan/]] with Dr Swastee Ranjan (3 January 2018)
+<div created="20211209081210238" modified="20221018115417040" tags="About" title="Writing and press about my work">
+<pre>[[Performing 'boardness' article|https://www.artsprofessional.co.uk/magazine/article/performing-boardness]] about my artist residency on the FACT Liverpool Board of Trustees in 2021-2022, by CEO Nicola Triscott. Text also reproduced [[here|Performing 'boardness' article]].
+
+[[Interview on the Art/Law Network|https://artlawnetwork.org/interview-with-artist-jack-tan/]] with Dr Swastee Ranjan (3 January 2018)
 
 //[[The New Rules of Algorithmic Institutions]]// by Stefano Harney in [[Former West: Art and the Contemporary after 1989|https://formerwest.org/Publication]]. Published 10 March 2017
 
