--- a/index.html
+++ b/index.html
@@ -425,6 +425,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/About-My Cloud--118161433</li>
 
+<li>$:/state/toc/TableOfContents/About-Writing and press about my work--118161433</li>
+
 <li>$:/state/toc/TableOfContents/About/CV-Projects by type--118161433</li>
 
 <li>$:/state/toc/TableOfContents/About/CV-Projects by year--118161433</li>
@@ -948,6 +950,8 @@ Error message and password prompt
 <li>Recent Work</li>
 
 <li>Reimagining Governance</li>
+
+<li>Reimagining the Partnership Agreement Through An Anti-Racist Lens</li>
 
 <li>Residencies</li>
 
@@ -13534,10 +13538,10 @@ exports.context = contextWidget;
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20221018114748919" title="$:/state/toc/TableOfContents-About--118161433">
-<pre>open</pre>
+<div created="20211209081213628" modified="20221018125323804" title="$:/state/toc/TableOfContents-About--118161433">
+<pre>close</pre>
 </div>
-<div created="20220513071259660" modified="20221010122023977" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
+<div created="20220513071259660" modified="20221018125320010" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
 <pre>close</pre>
 </div>
 <div created="20220223054537977" modified="20220513064752478" title="$:/state/toc/TableOfContents-Artworks--118161433">
@@ -13552,8 +13556,8 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20221012085249748" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
-<pre>open</pre>
+<div created="20220513065309542" modified="20221018125321196" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
 <pre>open</pre>
@@ -13636,6 +13640,9 @@ exports.context = contextWidget;
 <div created="20220613085715978" modified="20221010122015584" title="$:/state/toc/TableOfContents/About-My Cloud--118161433">
 <pre>close</pre>
 </div>
+<div created="20221018124057987" modified="20221018125322896" title="$:/state/toc/TableOfContents/About-Writing and press about my work--118161433">
+<pre>close</pre>
+</div>
 <div created="20211214093659779" modified="20211214093659779" title="$:/state/toc/TableOfContents/About/CV-Projects by type--118161433">
 <pre>open</pre>
 </div>
@@ -13672,7 +13679,7 @@ exports.context = contextWidget;
 <div created="20220513083711981" modified="20220930123859310" title="$:/state/toc/TableOfContents/Artistic Practice-Installation--118161433">
 <pre>close</pre>
 </div>
-<div created="20220701101345268" modified="20220930123905036" title="$:/state/toc/TableOfContents/Artistic Practice-Law and Art--118161433">
+<div created="20220701101345268" modified="20221018125244130" title="$:/state/toc/TableOfContents/Artistic Practice-Law and Art--118161433">
 <pre>close</pre>
 </div>
 <div created="20220513083714326" modified="20220930123918806" title="$:/state/toc/TableOfContents/Artistic Practice-Organisational Change--118161433">
@@ -13768,7 +13775,7 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20221010122021449" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<div created="20220513080643746" modified="20221018124252879" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20220706092625489" modified="20220930124223635" title="$:/state/toc/TableOfContents/Current and Selected Work-Forthcoming Work--118161433">
@@ -13930,7 +13937,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20221018114750931" list="[[Writing and press about my work]] [[Current Work]]" modified="20221018115418891" title="$:/StoryList">
+<div created="20221018124058703" list="[[Reimagining the Partnership Agreement Through An Anti-Racist Lens]] [[Current Work]]" modified="20221018125052978" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14832,7 +14839,7 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20221018122843058" tags="[[Current and Selected Work]]" title="Current Work">
+<div created="20220513065347695" modified="20221018125050815" tags="[[Current and Selected Work]]" title="Current Work">
 <pre>Exhibitions, residencies, talks and projects that are currently on display or available to view. 
 
 Also check out [[recent work|Recent Work]] I've finished in the last few months together with some completed while back but are still considered recent to me because they have a long finish. 🍷 
@@ -14842,6 +14849,7 @@ Also check out [[recent work|Recent Work]] I've finished in the last few months 
 [[Works-in-Progress]] are emerging and current areas of study/research that may or may not ever be presented. Some current long term projects may be described or categorised here too, but always within the context of various nodes of artistic study and development that I am working on.
 
 !!Current Work
+|[img[https://i.ytimg.com/vi/Cs2czy7bMG4/maxresdefault.jpg]]|I have been commissioned by the [[Sheffield Centre for Equity and Inclusion|https://equityinclusionsheffield.co.uk/]] to facilitate knowledge exchange workshops and develop a draft partnership agreement that the centre/university could use with its external partners. Titled '[[Reimagining the Partnership Agreement Through An Anti-Racist Lens]]', I will be creating a partnership contract that resists traditional ideas of what a partnership is, and instead opens up contractual space for new kinds of relating and partnering.|
 |[img[https://www.artsprofessional.co.uk/sites/artsprofessional.co.uk/files/styles/551_by_350_feature/public/main/articles/edited_jack_tan_performing_boardness.png?itok=Zs5rh09h]]|[[Performing 'boardness' article|https://www.artsprofessional.co.uk/magazine/article/performing-boardness]] on Arts Professional about my residency on the FACT Liverpool Board of Trustees, by CEO Nicola Triscott.]]|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Mandy%20Merzaban,%20Workspace%20Tableau%202021.png?raw=true]]|Slow Writing with Mandy Merzaban, Autumn 2022. A collaborative writing project with Mandy Merzaban to share our thoughts and practices. Commissioned by Delfina Foundation and funded by Tate.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Performing%20Boardness%20-%20audience%20image1.jpg?raw=true]]|[[Performing Boardness]] for [[Fact Liverpool|https://www.fact.co.uk/event/jack-tan-performing-boardness]], Sep 2022. A participatory performance and installation where FACT Trustees perform board meetings with members of the public. The culmination of my [[FACT Board Artist-in-Residence]], I will be presenting a performance event at FACT Liverpool comprising a number of roundtables led by FACT board members. This event is an adaptation of Neil Cumming's reenactment of the Artist Placement Group's 'Sculpture' which he produced at Raven Row and called [['Education Not Knowing'|https://neilcummings.com/content/apg-sculpture]].|
@@ -16421,9 +16429,13 @@ It was interesting to note that event though the majority of the audience was Pa
 <div created="20210925121911891" modified="20220513065053783" tags="[[Artistic Practice]]" title="Performances">
 <pre></pre>
 </div>
-<div created="20221018115422803" modified="20221018122636999" tags="[[Writing and press about my work]]" title="Performing 'boardness' article">
+<div created="20221018115422803" modified="20221018124246017" tags="[[Writing and press about my work]] [[Current Work]]" title="Performing 'boardness' article">
 <pre>!Performing ‘boardness’
-&lt;br&gt;12 October 2022, published on [[Arts Professional|https://www.artsprofessional.co.uk/magazine/article/performing-boardness]].
+
+12 October 2022, published on [[Arts Professional|https://www.artsprofessional.co.uk/magazine/article/performing-boardness]].
+
+[img[https://www.artsprofessional.co.uk/sites/artsprofessional.co.uk/files/styles/551_by_350_feature/public/main/articles/edited_jack_tan_performing_boardness.png?itok=Zs5rh09h]]
+&lt;br&gt;^^Jack Tan, Performing Boardness, 2022. FACT, Liverpool. Photo: Rob Battersby^^
 
 ''What does it mean to have an artist-in-residence working with the board? Nicola Triscott reflects on an unusual journey revealing the importance of board culture to arts organisations.''
 
@@ -16803,6 +16815,30 @@ Book tickets [[here|https://www.eventbrite.com/e/re-imagining-governance-tickets
 And also about how governance is a social justice issue for me. Governance is a form of worlding, i.e., the material and social world is created in boardrooms, so if we want to create a new world, we need to see to how we do governance.
 
 &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/HdinCzO6xl8&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+</pre>
+</div>
+<div created="20221018125102152" modified="20221018125410292" tags="[[Current Work]] [[Contracts and Art]]" title="Reimagining the Partnership Agreement Through An Anti-Racist Lens">
+<pre>!Project Summary
+
+From the Centre for Equity and Inclusion's [[website|https://equityinclusionsheffield.co.uk/ke-projects/]]:
+
+&lt;&lt;&lt;
+University processes play a significant role in reinforcing hierarchical power dynamics in partnership work. Creating more equitable processes is therefore a key priority for the University’s new Centre for Equity &amp; Inclusion and its partners. 
+
+This project will discuss, plan and produce an anti-racist partnership agreement which foregrounds issues of power, accountability and safety and establishes mechanisms that protect the interests, values and rights of those historically exploited by the university in partnership work. 
+
+This will be achieved through 2 half-day workshops, facilitated by Jack Tan who specialises in art practice-led legal research. After unpacking key themes and issues with partnership work, Tan will apply research grounded in postcolonial theory, British anti-racism history, Black studies, queer theory, and new materialism to draft a partnership agreement. This agreement will be piloted in future Knowledge Exchange projects that run through the Centre to ensure they have been rigorously reviewed and assessed.
+
+&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/Cs2czy7bMG4&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
+&lt;&lt;&lt;
+
+&lt;br&gt;
+
+[[Hopes and Fears for the Centre for Equity &amp; Inclusion|https://equityinclusionsheffield.co.uk/hopes-fears/]] by Centre Project Manager Alex Mason:
+
+&lt;&lt;&lt;
+ I struggled to find a community with which to share my daily frustrations, process my growing understanding and direct experience of race and racism, agitate for change, and simply decompress. There were very few people of colour in my cohort, and even fewer who expressed a similar interest in and commitment to racial justice. My ability to continue with and complete the doctoral programme was almost entirely dependent on making connections with socially conscious individuals outside the institution, most of whom were from racially marginalised backgrounds. I remember the sheer sense of relief, a quite literal release of physical tension, whenever I sat amongst such people, who aside from being critically astute also showed so much warmth in their interactions with me. ... It is my hope and ambition that the Centre offers the same sense of solace and direction to current and future postgraduate students of colour.
+&lt;&lt;&lt;
 </pre>
 </div>
 <div created="20210925122053131" modified="20220513071232503" tags="[[Artistic Practice]]" title="Residencies">
