--- a/index.html
+++ b/index.html
@@ -13548,7 +13548,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20221217160619797" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20221218082341306" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13962,7 +13962,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20221217160504942" list="" modified="20221217161415885" title="$:/StoryList">
+<div created="20221218161327008" list="[[Reimagining the Partnership Agreement Through An Anti-Racist Lens]] Contact Hello [[Current Work]]" modified="20221218161327008" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -16363,8 +16363,8 @@ Group 4:
 * We could create a Renters.' union and can we use this as a public pressure.
 * Civil disobedience or refusal.</pre>
 </div>
-<div created="20221217143818340" modified="20221217160920652" tags="[[Usership Not Ownership]]" title="Notes from Usership not Ownership - Marwa">
-<pre>!!![[Usership Not Ownership]] discussion with Marwa Asianos after watching her film //Who is Afraid of Ideology IV: Reverse Shot//
+<div created="20221217143818340" modified="20221218082203411" tags="[[Usership Not Ownership]]" title="Notes from Usership not Ownership - Marwa">
+<pre>!!![[Usership Not Ownership]] discussion with Marwa Asanios after watching her film //Who is Afraid of Ideology IV: Reverse Shot//
 
 [img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/Mosaic%20Rooms%20-%20Usership%20not%20Owneership%20IMG_0651.JPG]]
 
@@ -16957,17 +16957,18 @@ And also about how governance is a social justice issue for me. Governance is a 
 &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/HdinCzO6xl8&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
 </pre>
 </div>
-<div created="20221018125102152" modified="20221018125410292" tags="[[Current Work]] [[Contracts and Art]]" title="Reimagining the Partnership Agreement Through An Anti-Racist Lens">
+<div created="20221018125102152" modified="20221218161729307" tags="[[Current Work]] [[Contracts and Art]]" title="Reimagining the Partnership Agreement Through An Anti-Racist Lens">
 <pre>!Project Summary
 
-From the Centre for Equity and Inclusion's [[website|https://equityinclusionsheffield.co.uk/ke-projects/]]:
-
-&lt;&lt;&lt;
 University processes play a significant role in reinforcing hierarchical power dynamics in partnership work. Creating more equitable processes is therefore a key priority for the University’s new Centre for Equity &amp; Inclusion and its partners. 
 
 This project will discuss, plan and produce an anti-racist partnership agreement which foregrounds issues of power, accountability and safety and establishes mechanisms that protect the interests, values and rights of those historically exploited by the university in partnership work. 
 
 This will be achieved through 2 half-day workshops, facilitated by Jack Tan who specialises in art practice-led legal research. After unpacking key themes and issues with partnership work, Tan will apply research grounded in postcolonial theory, British anti-racism history, Black studies, queer theory, and new materialism to draft a partnership agreement. This agreement will be piloted in future Knowledge Exchange projects that run through the Centre to ensure they have been rigorously reviewed and assessed.
+
+https://equityinclusionsheffield.co.uk/our-story/
+
+&lt;br&gt;
 
 &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/Cs2czy7bMG4&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
 &lt;&lt;&lt;
@@ -16979,7 +16980,22 @@ This will be achieved through 2 half-day workshops, facilitated by Jack Tan who 
 &lt;&lt;&lt;
  I struggled to find a community with which to share my daily frustrations, process my growing understanding and direct experience of race and racism, agitate for change, and simply decompress. There were very few people of colour in my cohort, and even fewer who expressed a similar interest in and commitment to racial justice. My ability to continue with and complete the doctoral programme was almost entirely dependent on making connections with socially conscious individuals outside the institution, most of whom were from racially marginalised backgrounds. I remember the sheer sense of relief, a quite literal release of physical tension, whenever I sat amongst such people, who aside from being critically astute also showed so much warmth in their interactions with me. ... It is my hope and ambition that the Centre offers the same sense of solace and direction to current and future postgraduate students of colour.
 &lt;&lt;&lt;
-</pre>
+
+&lt;br&gt;
+
+!!!Participating Partners
+
+MA Consultancy (https://ma-consultancy.co.uk/) 
+
+Rosa Cisneros (https://rosasencis.org/about/) 
+
+Eelyn Lee (https://www.eelynlee.com/) 
+
+WOC  Azadi (@WOCAzadi) 
+
+SADACCA (https://www.sadacca.co.uk/) 
+
+African Voices Platform (https://www.africanvoicesplatform.org/) </pre>
 </div>
 <div created="20210925122053131" modified="20220513071232503" tags="[[Artistic Practice]]" title="Residencies">
 <pre></pre>
